# Python-Project-Playground

./: README.md  requirements.txt
1_Flask_Basic_Routes_Example/: Notebook  README.md  caller.py  main.py
2_Fastapi_Todo_List_API_Example/: 2_Fastapi_Todo_List_API_Example.postman_collection.json  README.md  caller.py  main.py  output  todo.db
3_Data_Exchange_Activity_Example/: database.py  flight_search.json  flight_search.xml  my_xml_2_json.py  person_data.json  person_data.xml  py_json.py  py_xml.py
4_SOAP_WSDL_Client_Example/: README.md  SOAP WSDL Client Example.postman_collection.json  country_info_service.py  country_info_service_with_soap.py  country_info_service_without_soap.py  free_calculator_with_soap.py  free_calculator_without_soap.py  temperature_converter.py
5_MongoDB_Tutorial_Class/: README.md  caller.py  database.py
6_Docker_Tutorial_Class/: README.md
7_Poetry_Tutorial_Class/: README.md
7_Poetry_Tutorial_Class/1_my_project/: pyproject.toml
7_Poetry_Tutorial_Class/3_my_poetry_project_flask/: README.md  pyproject.toml
7_Poetry_Tutorial_Class/3_my_poetry_project_flask/src/my_poetry_project_flask/: app.py
7_Poetry_Tutorial_Class/3_my_poetry_project_flask/tests/: test_app.py
7_Poetry_Tutorial_Class/5_master_poetry_example/: README.md  pyproject.toml
7_Poetry_Tutorial_Class/5_master_poetry_example/src/master_poetry_example/: client.py  server.py
7_Poetry_Tutorial_Class/5_master_poetry_example/tests/: test_app.py
8_AWS_Tutorial_Class/: AWS_CLI.md  README.md  Test Any AWS Lambda Function.postman_collection.json  my_function.py
8_AWS_Tutorial_Class/4 sam-dynamodb-ndc-rq-rs-app/: Makefile  README.md  lambda-hello-AWS_SAM.postman_collection.json  pyproject.toml  template.yaml
8_AWS_Tutorial_Class/4 sam-dynamodb-ndc-rq-rs-app/src/: dynamodb.py  main.py  requirements.txt
9_Terraform_Tutorial_Class/: Notebook  README.md  Terraform.md
(+45 files in other folders)
