[project]
name = "master-poetry-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "master_poetry_example", from = "src"}]

[tool.poetry.scripts]
server = "master_poetry_example.server:main"
client = "master_poetry_example.client:main"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
